# rust_tls_verifier

./: .gitignore  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  server.cer  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/test/resources/: client.p12  client.pem
