[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["shell-open", "devtools"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["blocking"] }
warp = { version = "0.3.5", features = ["tls"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["native-tls"]
rustls-tls = ["reqwest/rustls-tls-manual-roots"]
native-tls = ["reqwest/native-tls"]

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
