[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Kjetil Fjellheim"]
license = "LGPL2"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4.1", features = ["shell-open", "devtools", "custom-protocol"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["blocking", "native-tls"] }
warp = { version = "0.3.5", features = ["tls"] }
env_logger = { version = "0.10.0"}

[profile.release]
incremental = false
codegen-units = 1
panic = "abort"
opt-level = "s"
lto = true
